mfe-system-examples/shell/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-system-examples-shell
  labels:
    app: mfe-system-examples-shell
spec:
  selector:
    app: mfe-system-examples-shell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
