mfe-system-examples/shell/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mfe-system-examples-shell-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /apps/shell

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mfe-system-examples-shell-route
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/apps/shell`)
      services:
        - name: mfe-system-examples-shell
          port: 80
      middlewares:
        - name: mfe-system-examples-shell-stripprefix
